--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "expo": "~50.0.11",
+    "expo-battery": "^7.7.2",
+    "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
