--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "expo": "~50.0.11",
     "expo-battery": "^7.7.2",
+    "expo-brightness": "~11.8.0",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~1.11.1",
     "nativewind": "^2.0.11",
